# hklpy2_solvers

./: .copyright.txt  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  Makefile  README.md  RELEASE_NOTES.rst  index.html  pyproject.toml
docs/: Makefile
latest/: .buildinfo  api.html  genindex.html  geometries.html  guide_ad_hoc.html  guide_diffcalc.html  guides.html  howto_benchmark.html  index.html  install.html  license.html  objects.inv  py-modindex.html  release_notes.html  search.html  searchindex.js  usage.html
scripts/: stamp_release.py  update_copyright_year.py
tests/: _hkl_library_probe.py  test_ad_hoc_solver.py  test_cross_validation.py  test_diffcalc_optional.py  test_diffcalc_solver.py  test_docs_guides.py  test_package.py
v0.1.5/: .buildinfo  api.html  genindex.html  geometries.html  index.html  install.html  py-modindex.html  release_notes.html  search.html  searchindex.js
v0.1.6/: .buildinfo  api.html  genindex.html  geometries.html  index.html  install.html  objects.inv  py-modindex.html  release_notes.html  search.html  searchindex.js  usage.html
v0.1.7/: .buildinfo  api.html  genindex.html  geometries.html  index.html  install.html  py-modindex.html  release_notes.html  search.html  searchindex.js  usage.html
v0.1.8/: .buildinfo  api.html  genindex.html  geometries.html  index.html  install.html  objects.inv  py-modindex.html  release_notes.html  search.html  searchindex.js  usage.html
v0.1.9/: .buildinfo  api.html  genindex.html  geometries.html  guides.html  howto_benchmark.html  index.html  install.html  objects.inv  py-modindex.html  release_notes.html  search.html  searchindex.js  usage.html
v0.2.0/: .buildinfo  api.html  genindex.html  geometries.html  guides.html  howto_benchmark.html  index.html  install.html  objects.inv  py-modindex.html  release_notes.html  search.html  searchindex.js  usage.html
v0.2.1/: .buildinfo  api.html  genindex.html  geometries.html  guide_ad_hoc.html  guide_diffcalc.html  guides.html  howto_benchmark.html  index.html  install.html  py-modindex.html  release_notes.html  search.html  usage.html
v0.2.2/: .buildinfo  api.html  genindex.html  geometries.html  guide_ad_hoc.html  guide_diffcalc.html  guides.html  howto_benchmark.html  index.html  install.html  py-modindex.html  release_notes.html  search.html  searchindex.js  usage.html
v0.3.0/: .buildinfo  api.html  genindex.html  geometries.html  guide_ad_hoc.html  guide_diffcalc.html  guides.html  howto_benchmark.html  index.html  install.html  objects.inv  (+5 more)
(+329 files in other folders)
